--- a/styles/fields/droparea.css
+++ b/styles/fields/droparea.css
@@ -1,5 +1,6 @@
 .dropzone {
-  border: .2rem dashed var(--stroke-default);
+  border: 2px dashed transparent;
+  outline: .2rem dashed var(--stroke-default);
   border-radius: .30rem;
 
   display: grid;
@@ -23,7 +24,7 @@
   }
 
   &:hover, &:has(input:focus) {
-    border-width: .2rem;
+    outline-width: 0;
     border-color: var(--stroke-highlight);
     background-color: var(--surface-secondary);
     & p {
